--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -1,3 +1,4 @@
+<!-- list-jobs.html -->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="~{fragments :: head}">
@@ -10,7 +11,41 @@
 
   <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
-  <!-- TODO #1 - Use a loop to display job results in a table. -->
+  <div th:if="${jobs}">
+
+      <table class="job-listing" th:each="job : ${jobs}">
+
+        <tr>
+          <th>ID</th>
+          <td th:text="${job.id}"></td>
+        </tr>
+        <tr>
+          <th>Name</th>
+          <td th:text="${job.name}"></td>
+        </tr>
+        <tr>
+          <th>Employer</th>
+          <td th:text="${job.employer.value}"></td>
+        </tr>
+        <tr>
+          <th>Location</th>
+          <td th:text="${job.location.value}"></td>
+        </tr>
+        <tr>
+          <th>Position Type</th>
+          <td th:text="${job.positionType.value}"></td>
+        </tr>
+        <tr>
+          <th>Skill</th>
+          <td th:text="${job.coreCompetency.value}"></td>
+        </tr>
+      </table>
+
+    </div>
+
+  <div th:unless="${jobs}">
+    <p>No jobs found.</p>
+  </div>
 
 </div>
 
